--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "@kutsan/eslint-config",
   "version": "0.0.0",
+  "description": "Eslint configuration for my projects",
+  "repository": "github:kutsan/eslint-config",
+  "license": "MIT",
+  "author": "Kutsan Kaplan <me@kutsan.dev> (https://kutsan.dev)",
   "type": "module",
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "build": "rimraf dist && tsc --project tsconfig.build.json",
     "format": "prettier --ignore-path .gitignore --write --list-different .",
