--- a/package.json
+++ b/package.json
@@ -25,28 +25,30 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@eslint/js": "^9.16.0",
+    "@eslint/js": "^9.39.1",
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-config-love": "^133.0.0",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "typescript-eslint": "^8.17.0"
+    "typescript-eslint": "^8.46.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
-    "@kutsan/prettier-config": "^1.0.1",
-    "@kutsan/typescript-config": "^1.0.0",
+    "@kutsan/prettier-config": "^1.1.0",
+    "@kutsan/typescript-config": "^1.2.0",
     "@types/node": "^24.10.1",
-    "eslint": "^9.31.0",
+    "eslint": "^9.39.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
-    "prettier": "^3.4.2",
-    "rimraf": "^6.0.1",
-    "typescript": "^5.7.2"
+    "prettier": "^3.6.2",
+    "rimraf": "^6.1.0",
+    "typescript": "^5.9.3"
   },
   "peerDependencies": {
     "eslint": ">=9"
-  }
+  },
+  "packageManager": "pnpm@10.22.0+sha512.bf049efe995b28f527fd2b41ae0474ce29186f7edcb3bf545087bd61fbbebb2bf75362d1307fda09c2d288e1e499787ac12d4fcb617a974718a6051f2eee741c"
 }
