--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "scripts": {
     "build": "rimraf dist && tsc --project tsconfig.build.json",
